<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.gotasoft.movies.home.ProductViewModel"></variable>

        <variable
            name="viewaction"
            type="com.gotasoft.movies.home.ProductContract.View"></variable>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.DrawerLayout
            android:id="@+id/drawer_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/frame_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBackground">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@color/colorPrimaryDark">

                        <ImageView
                            android:id="@+id/img_category"
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:onClick="@{() ->viewaction.openCategoryView()}"
                            android:src="@drawable/menu_icon" />

                        <ImageView
                            android:id="@+id/img_search"
                            android:layout_width="wrap_content"
                            android:layout_height="22dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:onClick="@{() ->viewaction.openSearchView()}"
                            android:src="@drawable/btn_setting" />

                        <TextView
                            android:id="@+id/tv_title"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_toEndOf="@+id/img_category"
                            android:layout_toStartOf="@+id/img_search"
                            android:gravity="center"
                            android:text="@{viewmodel.title}"
                            android:textColor="@color/colorAccent"
                            android:textSize="16sp" />

                    </RelativeLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rcv_product"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="45dp"
                        android:paddingBottom="60dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/colorMenu"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginBottom="10dp"
                            android:background="@color/colorDriver" />

                        <LinearLayout

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:onClick="@{() ->viewaction.onHome()}"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="20dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageButton
                                    android:layout_width="25dp"
                                    android:layout_height="25dp"
                                    android:background="@drawable/house" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/home"
                                    android:textColor="@color/colorTextMenu" />
                            </LinearLayout>

                            <LinearLayout
                                android:onClick="@{() ->viewaction.onMyMovies()}"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageButton
                                    android:layout_width="25dp"
                                    android:layout_height="25dp"
                                    android:background="@drawable/film" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/my_movies"
                                    android:textColor="@color/colorTextMenu" />
                            </LinearLayout>

                            <LinearLayout
                                android:onClick="@{() ->viewaction.onHistory()}"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="10dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageButton
                                    android:layout_width="25dp"
                                    android:layout_height="25dp"
                                    android:background="@drawable/history" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/history"
                                    android:textColor="@color/colorTextMenu" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_left"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:background="@color/colorBackground"
                android:orientation="horizontal"></FrameLayout>

            <FrameLayout
                android:id="@+id/frame_right"
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:background="@android:color/white"
                android:orientation="horizontal">

            </FrameLayout>
        </android.support.v4.widget.DrawerLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_shadow_start_color"
            android:visibility="@{viewmodel.isLoading ? View.VISIBLE: View.GONE}">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
        </RelativeLayout>
    </RelativeLayout>
</layout>
